[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.11.0"
aes = "0.7.5"
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0" # For working with JSON data
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
colored = "2.0"


sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ]  }
